--- a/app/templates/causes/action_form.html
+++ b/app/templates/causes/action_form.html
@@ -13,12 +13,22 @@
             </fieldset>
             <fieldset>
                 <div class="six columns offset-by-three">
+                    {{ render_f(form.summary, "u-full-width")  }}
+                </div>
+            </fieldset>
+            <fieldset>
+                <div class="six columns offset-by-three">
                     {{ render_f(form.description, "u-full-width")  }}
                 </div>
             </fieldset>
             <fieldset>
                 <div class="six columns offset-by-three">
                     {{ render_f(form.expiration, "u-full-width") }}
+                </div>
+            </fieldset>
+            <fieldset>
+                <div class="six columns offset-by-three">
+                    {{ render_f(form.link, "u-full-width")  }}
                 </div>
             </fieldset>
         </div>
