Add further GA tracking, and user ID

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -27,6 +27,9 @@
             m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
         })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
         ga('create', 'UA-78265355-1', 'auto');
+        {% if current_user.is_authenticated %}
+        ga('set', 'userId', {{ current_user.id }});
+        {% endif %}
         ga('send', 'pageview');
     </script>
 </head>
