--- a/app/templates/causes/cause_form.html
+++ b/app/templates/causes/cause_form.html
@@ -9,6 +9,7 @@
             <fieldset>
                 <div class="six columns offset-by-three">
                     {{ render_f(form.title, "u-full-width") }}
+                    {{ render_f(form.intro, "u-full-width")  }}
                 </div>
             </fieldset>
             <fieldset>
