--- a/app/templates/users/login.html
+++ b/app/templates/users/login.html
@@ -2,6 +2,7 @@
 {% set active_page = "login" %}
 
 {% block scripts %}
+{{ super() }}
 <script type="text/javascript" src="{{ url_for('static', filename='jQuery-Form-Validator/form-validator/jquery.form-validator.min.js') }}"></script>
 <script>
 $(document).ready(function() {
