--- a/app/templates/posts/post_form.html
+++ b/app/templates/posts/post_form.html
@@ -2,30 +2,32 @@
 {% set active_page = "comments" %}
 
 {% block content %}
-{% from "helpers/forms.html" import render_field, render_boolean, render_f %}
-<form id="post" name="post" action="" method="post">
-    {{ form.hidden_tag() }}
-    <div class="row">
-        <fieldset>
-            <div class="six columns offset-by-three">
-                {{ render_f(form.title, "u-full-width") }}
-            </div>
-        </fieldset>
-        <fieldset>
-            <div class="six columns offset-by-three">
-                {{ render_f(form.body, "u-full-width")  }}
-            </div>
-        </fieldset>
-    </div>
-    <div class="row">
-        <fieldset>
-            <div class="three columns offset-by-three">
-                <input id="save" type="submit" value="Save"
-                    class="button button-primary u-mobile-fixed-bottom">
-            </div>
-            <div class="three columns">
-            </div>
-        </fieldset>
-    </div>
-</form>
+<div class="container u-add-margin-top">
+    {% from "helpers/forms.html" import render_field, render_boolean, render_f %}
+    <form id="post" name="post" action="" method="post">
+        {{ form.hidden_tag() }}
+        <div class="row">
+            <fieldset>
+                <div class="six columns offset-by-three">
+                    {{ render_f(form.title, "u-full-width") }}
+                </div>
+            </fieldset>
+            <fieldset>
+                <div class="six columns offset-by-three">
+                    {{ render_f(form.body, "u-full-width")  }}
+                </div>
+            </fieldset>
+        </div>
+        <div class="row">
+            <fieldset>
+                <div class="three columns offset-by-three">
+                    <input id="save" type="submit" value="Save"
+                        class="button button-primary u-mobile-fixed-bottom">
+                </div>
+                <div class="three columns">
+                </div>
+            </fieldset>
+        </div>
+    </form>
+</div>
 {% endblock %}
