Fix "Support!" link in action pop-up

--- a/app/templates/causes/cause.html
+++ b/app/templates/causes/cause.html
@@ -154,7 +154,7 @@
                                     pk=action.id) }}"
                                     href="{{ action.link }}">Support!</a>
                                 {% else %}
-                                <a class="support button button-primary" ref="{{ url_for('causes.action_support', slug=cause.slug,
+                                <a class="button button-primary" href="{{ url_for('causes.action_support', slug=cause.slug,
                                     pk=action.id) }}">Support!</a>
                                 {% endif %}
                             </p>
