--- a/app/templates/causes/cause.html
+++ b/app/templates/causes/cause.html
@@ -72,7 +72,7 @@
     <div class="row">
         <div class="nine columns">
             <h3>{{ cause.story_heading }}</h3>
-            {{ cause.story_content }}
+            {{ cause.story_content|markdown }}
         </div>
         <div class="three columns">
             <a class="button button-modal u-full-width u-add-margin-top"
