--- a/app/templates/users/signup.html
+++ b/app/templates/users/signup.html
@@ -84,12 +84,30 @@ $(document).ready(function() {
             </fieldset>
         </div>
         <div class="row">
-            <fieldset>
-                <div class="six columns offset-by-three">
+            <div class="three columns offset-by-three">
+                <fieldset>
                     <input id="login" class="button button-primary u-full-width u-mobile-fixed-bottom" type="submit" value="Sign Up">
-                </div>
-            </fieldset>
+                </fieldset>
+            </div>
+            <div class="three columns">
+                <small class="small-block">
+                    By accessing and using this service, you agree to the <a href="/terms_of_service">terms of service</a>.
+                </small>
+            </div>
         </div>
     </form>
+    <hr>
+    <div class="row">
+        <div class="one-third column">
+            <a href="{{ url_for('twitter.login') }}" class="button u-full-width">Sign up with Twitter</a>
+        </div>
+        <div class="one-third column">
+            <a href="{{ url_for('google.login') }}" class="button u-full-width">Sign up with Google</a>
+        </div>
+        <div class="one-third column">
+            <a href="{{ url_for('facebook.login') }}" class="button
+                u-full-width">Sign up with Facebook</a>
+        </div>
+    </div>
 </div>
 {% endblock %}
