--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -483,7 +483,7 @@ h3 span{
     background: url(../images/transparent-pixel.png);
 }
 .modal div {
-    width: 300px;
+    width: 50%;
     margin: 100px auto;
     padding: 15px;
     background-color: #fff;
